--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
+* {
+    background: #121212;
+  }
 
-/* div {
+div {
     height: 50px;
-    width: 50px; */
+    width: 50px;
 }
 body{
     padding: 0;
@@ -84,6 +87,29 @@ body{
     border: 1px black solid;
 }
 
+
+#title-page{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 30px;
+    color: green;
+    visibility: visible;
+    text-align: center;
+ }
+ 
+ #title-page p{
+   color: aliceblue;
+ }
+ 
+ #start-game{
+    margin: 0 auto;
+    display: block;
+    font-size: 50px;
+    text-align: center;
+    color: gold;
+    background: rgba(50,50,50,.8);
+    border-radius: 50%;
+  }
+
 .popup {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -119,4 +145,14 @@ body{
     color: black;
     text-decoration: none;
     cursor: pointer;
+  }
+
+  #give-up {
+    margin: 0 auto;
+    display: block;
+    font-size: 20px;
+    text-align: center;
+    color: rgb(41, 179, 70);
+    background: rgba(50,50,50,.8);
+    border-radius: 10%;
   }
