--- a/css/style.css
+++ b/css/style.css
@@ -64,22 +64,31 @@ body{
     height: 50px;
 }
 
+.shadow-Nelda{
+    background: pink;
+    background-size: cover;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+} 
+}
+/* 
 .popup {
     display: none; 
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgba(0,0,0,0.4); 
+  } */
   
 /* popup box */
 .popup-content {
     background-color: #fefefe;
+    text-align: left;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
@@ -257,10 +266,33 @@ body{
     text-align: center;
  }
  
-#title-page p{
-   color: aliceblue;
- }
+#grave{
+    background-image: url("../sprites/grave-sprite.jpg");
+    position: absolute;
+    height: 50px;
+    width: 50px;
+}
  
 #words{
-    color:darkblue
+    color: aliceblue;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    text-align: left;
+}
+
+#secret{
+    display: grid;
+    position: relative;
+    background:black;
+    height: 350px;
+    width: 500px;
+    padding: 0;
+    margin: 0;
+    border: 1px black solid;
+}
+
+#faerie{
+    background: orange;
+    position: absolute;
+    height: 50px;
+    width: 50px;
 }
