--- a/css/style.css
+++ b/css/style.css
@@ -71,44 +71,24 @@ body{
     width: 50px;
     height: 50px;
 } 
-}
-/* 
-.popup {
-    display: none; 
-    position: fixed; 
-    z-index: 1; 
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgba(0,0,0,0.4); 
-  } */
-  
-/* popup box */
-.popup-content {
+
+.nelda{
+    background: rgb(82, 1, 114);
+    background-size: cover;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+} 
+
+
+/* .popup-content {
     background-color: #fefefe;
     text-align: left;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 50%; 
-  }
-  
-/* for closing popups */
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
+  } */
 
 #give-up {
     margin: 0 auto;
@@ -137,6 +117,7 @@ body{
     background-color: darkblue;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     width: 485px;
+    height: 120px;
     padding: 10px 0 0 10px;
 }
 
@@ -282,7 +263,7 @@ body{
 #secret{
     display: grid;
     position: relative;
-    background:black;
+    /* background:black; */
     height: 350px;
     width: 500px;
     padding: 0;
@@ -292,6 +273,7 @@ body{
 
 #faerie{
     background: orange;
+    display: none;
     position: absolute;
     height: 50px;
     width: 50px;
